# ode-solver

./: .gitignore  CMakeLists.txt  README.md
example/: config.json
src/: AdamsBashforthTwo.cpp  AdamsBashforthTwo.h  ExplicitEuler.cpp  ExplicitEuler.h  Heun.cpp  Heun.h  ImplicitEuler.cpp  ImplicitEuler.h  ImplicitSolver.h  ODESolver.h  RungeKutta.cpp  RungeKutta.h  solver.cpp  utilities.cpp  utilities.h
test/: unit_test.cpp
